--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
 /* LOGO */
 .logo {
   height: 3.25rem;
-  margin-left: 3rem; }
+  margin-left: 2rem; }
 
 /* SEARCH BOX */
 .search {
@@ -72,7 +72,7 @@ body {
     border: none;
     padding: 0.7rem 2rem;
     border-radius: 100px;
-    transition: all .2s;
+    transition: all 0.2s;
     /* Chrome/Opera/Safari */
     /* Firefox 19 > 50 */
     /* IE 10+ */
@@ -115,13 +115,86 @@ body {
 /* USER NAVIGATION */
 .user-nav {
   display: flex;
-  justify-content: space-between; }
+  align-items: center;
+  align-self: stretch; }
+  .user-nav > * {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    cursor: pointer; }
+  .user-nav > *:hover {
+    background-color: var(--color-gray-light-2); }
+  .user-nav__icon-box {
+    position: relative; }
   .user-nav__icon {
     height: 2.25rem;
-    width: 2.25rem; }
+    width: 2.25rem;
+    fill: var(--color-gray-dark-2); }
+  .user-nav__notification {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    width: 1.75rem;
+    height: 1.75rem;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 0.8rem;
+    background-color: var(--color-primary);
+    color: #fff; }
   .user-nav__user-photo {
     height: 3.75rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1rem; }
+
+/* SIDEBAR NAVIGATION */
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem; }
+  .side-nav__item {
+    position: relative; }
+    .side-nav__item:not(:last-child) {
+      margin-bottom: 0.5rem; }
+  .side-nav__item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+  .side-nav__item:hover::before, .side-nav__item--active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: var(--color-primary-light); }
+  .side-nav__link:link, .side-nav__link:visited {
+    position: relative;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    padding: 1.5rem 3rem;
+    color: var(--color-gray-light-1);
+    text-decoration: none;
+    text-transform: uppercase; }
+  .side-nav__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; }
+
+/* LEGAL TEXT */
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-gray-light-4);
+  text-align: center;
+  padding: 2.5rem; }
 
 .container {
   max-width: 120rem;
@@ -143,9 +216,13 @@ body {
   display: flex; }
 
 .sidebar {
-  background-color: var(--color-gray-dark-1);
-  flex: 0 0 18%; }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0 0 18%;
+  background-color: var(--color-gray-dark-1); }
 
 .hotel-view {
   background-color: rebeccapurple;
+  height: 80rem;
   flex: 1; }
