--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,7 +1,7 @@
 /* LOGO */
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 /* SEARCH BOX */
@@ -21,8 +21,8 @@
     border: none;
     padding: 0.7rem 2rem;
     border-radius: 100px;
-    transition: all .2s;
-    
+    transition: all 0.2s;
+
     &:focus {
       width: 100%;
       background-color: var(--color-gray-light-3);
@@ -34,32 +34,31 @@
       font-weight: 100;
       color: var(--color-gray-light-4);
     }
-    
+
     /* Firefox 19 > 50 */
     &::-moz-placeholder {
       font-weight: 100;
       color: var(--color-gray-light-4);
       opacity: 1;
     }
-    
+
     /* IE 10+ */
     &:-ms-input-placeholder {
       font-weight: 100;
       color: var(--color-gray-light-4);
     }
-    
+
     /* Edge */
     &::-ms-input-placeholder {
       font-weight: 100;
       color: var(--color-gray-light-4);
     }
-    
+
     &::placeholder {
       font-weight: 100;
       color: var(--color-gray-light-4);
       opacity: 1;
     }
-
   }
 
   &__input:focus + &__button {
@@ -76,9 +75,7 @@
 
     &:active {
       transform: translateY(2px);
-
     }
-
   }
 
   &__icon {
@@ -91,30 +88,120 @@
 /* USER NAVIGATION */
 .user-nav {
   display: flex;
-  justify-content: space-between;
-  &__icon-box {
+  align-items: center;
+  align-self: stretch;
 
+  & > * {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    cursor: pointer;
+  }
+
+  & > *:hover {
+    background-color: var(--color-gray-light-2);
+  }
+
+  &__icon-box {
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-gray-dark-2);
   }
 
   &__notification {
-
-  }
-
-  &__user {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    width: 1.75rem;
+    height: 1.75rem;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 0.8rem;
+    background-color: var(--color-primary);
+    color: #fff;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
   &__user-name {
-
   }
+}
+
+/* SIDEBAR NAVIGATION */
+
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, 
+                width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+                background-color 0.1s;
+  }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    position: relative;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    padding: 1.5rem 3rem;
+    color: var(--color-gray-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
+  }
+}
+
+/* LEGAL TEXT */
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-gray-light-4);
+  text-align: center;
+  padding: 2.5rem;
 }
