--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -18,16 +18,19 @@
 
 .content {
   display: flex;
-
 }
 
 .sidebar {
-  background-color: var(--color-gray-dark-1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex: 0 0 18%;
+  background-color: var(--color-gray-dark-1);
 
 }
 
 .hotel-view {
   background-color: rebeccapurple;
+  height: 80rem;
   flex: 1;
 }
