--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,86 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+/* GALLERY */
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    display: block;
+    width: 100%; }
+
+/* HOTEL OVERVIEW */
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-gray-light-2); }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem; }
+  .overview__stars {
+    display: flex;
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+  .overview__location {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem; }
+  .overview__icon-location {
+    margin-right: 0.5rem; }
+  .overview__rating {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    padding: 0 2.25rem;
+    margin-left: 3rem;
+    color: #fff;
+    background-color: var(--color-primary); }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    line-height: 1.3;
+    /* margin-bottom: -3px; */ }
+  .overview__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase; }
+
+/* BUTTON INLINE */
+.btn-inline {
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-size: inherit;
+  letter-spacing: 0.006em;
+  padding-bottom: 2px;
+  background-color: transparent;
+  color: var(--color-primary);
+  border: none;
+  border-bottom: 1px solid currentColor;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn-inline:hover {
+    color: var(--color-gray-dark-1); }
+  .btn-inline:focus {
+    animation: pulsate 1s infinite;
+    outline: none; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
+
 .container {
   max-width: 120rem;
   min-height: 50rem;
@@ -210,7 +290,7 @@ body {
   height: 7rem;
   font-size: 1.4rem;
   background-color: #fff;
-  border-bottom: var(--color-gray-light-2); }
+  border-bottom: 1px solid var(--color-gray-light-2); }
 
 .content {
   display: flex; }
@@ -223,6 +303,5 @@ body {
   background-color: var(--color-gray-dark-1); }
 
 .hotel-view {
-  background-color: rebeccapurple;
   height: 80rem;
   flex: 1; }
