--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -205,3 +205,120 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+/* GALLERY */
+
+.gallery {
+  display: flex;
+
+  &__photo {
+    display: block;
+    width: 100%;
+  }
+}
+
+/* HOTEL OVERVIEW */
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-gray-light-2);
+
+  &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+  }
+
+  &__stars {
+    display: flex;
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+
+  }
+
+  &__location {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+  }
+
+  &__icon-location {
+    margin-right: 0.5rem;
+  }
+
+  &__rating {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    padding: 0 2.25rem;
+    margin-left: 3rem;
+    color: #fff;
+    background-color: var(--color-primary);
+
+  }
+
+  &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    line-height: 1.3;
+    /* margin-bottom: -3px; */
+  }
+  
+  &__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
+
+}
+
+
+/* BUTTON INLINE */
+.btn-inline {
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-size: inherit;
+  letter-spacing: 0.006em;
+  padding-bottom: 2px;
+  background-color: transparent;
+  color: var(--color-primary);
+  border: none;
+  border-bottom: 1px solid currentColor;
+  cursor: pointer;
+  transition: all .2s;
+
+  &:hover {
+    color: var(--color-gray-dark-1);
+  }
+  
+  &:focus {
+    animation: pulsate 1s infinite;
+    outline: none;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  
+  100% {
+    transform: scale(1);
+    box-shadow: none;    
+  }
+}
