--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -13,7 +13,7 @@
   height: 7rem;
   font-size: 1.4rem;
   background-color: #fff;
-  border-bottom: var(--color-gray-light-2);
+  border-bottom: 1px solid var(--color-gray-light-2);
 }
 
 .content {
@@ -30,7 +30,6 @@
 }
 
 .hotel-view {
-  background-color: rebeccapurple;
   height: 80rem;
   flex: 1;
 }
