--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -140,7 +140,6 @@
 }
 
 /* SIDEBAR NAVIGATION */
-
 .side-nav {
   font-size: 1.4rem;
   list-style: none;
@@ -207,7 +206,6 @@
 }
 
 /* GALLERY */
-
 .gallery {
   display: flex;
 
@@ -221,7 +219,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-gray-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
@@ -296,8 +294,17 @@
   cursor: pointer;
   transition: all .2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
   &:hover {
     color: var(--color-gray-dark-1);
+
+    span {
+      margin-left: 8px;
+    }
   }
   
   &:focus {
@@ -320,5 +327,146 @@
   100% {
     transform: scale(1);
     box-shadow: none;    
+  }
+}
+
+/* PARAGRAPH */
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+/* LIST */
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 3rem 0;
+  margin: 3rem 0;
+  border-top: var(--line);
+
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+
+  &__item::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.7rem;
+
+    // background-image: url('../img/chevron-thin-right.svg');
+    // background-size: cover;
+
+    background-color: var(--color-primary);
+    -webkit-mask-image: url('../img/chevron-thin-right.svg');
+    -webkit-mask-size: cover;
+    mask-image: url('../img/chevron-thin-right.svg');
+    mask-size: cover;
+  }
+}
+
+/* Using columns instead of flex, source order is more "correct" IMO */
+/* .list-columns {
+  columns: 2;
+  list-style: none;
+  padding: 3rem 0;
+  margin: 3rem 0;
+  border-top: var(--line);
+
+  &__item::before {
+    content: '>'
+  }
+} */
+
+/* RECOMMEND */
+.recommend {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.3rem;
+  color: var(--color-gray-dark-3);
+
+  /* &__count {
+    // Im using justify-content: space-between on parent instead
+    //margin-right: auto;
+  } */
+
+  &__photo {
+    box-sizing: content-box;
+    width: 4rem;
+    height: 4rem;
+    border: 3px solid #fff;
+    border-radius: 50%;
+
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+
+}
+
+/* REVIEWS */
+.review {
+  position: relative;
+  overflow: hidden;
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+
+  &::before {
+    content: '\201C';
+    position: absolute;
+    top: -2.7rem;
+    left: -1rem;
+    font-family: sans-serif;
+    font-size: 20rem;
+    line-height: 1;
+    color: var(--color-gray-light-2);
+    z-index: 1;
+  }
+
+  &__text {
+    position: relative;
+    margin-bottom: 2rem;
+    z-index: 10;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+
+  }
+
+  &__photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-right: 1.5rem;
+    border-radius: 50%;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
+  }
+  
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-gray-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: var(--color-primary);
+
   }
 }
