--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -13,7 +13,7 @@
   height: 7rem;
   font-size: 1.4rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-gray-light-2);
+  border-bottom: var(--line);
 }
 
 .content {
@@ -30,6 +30,28 @@
 }
 
 .hotel-view {
-  height: 80rem;
+  flex: 1;
+}
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  font-size: 1.4rem;
+  background-color: var(--color-gray-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  flex: 0 0 60%;
+  padding: 3rem;
+  margin-right: 4.5rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+}
+
+.user-reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1;
 }
