--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -470,3 +470,67 @@
 
   }
 }
+
+/* CALL TO ACTION */
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+
+  }
+}
+
+/* CALL TO ACTION BUTTON */
+
+.btn {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.5rem;
+  font-weight: 3;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff;
+  cursor: pointer;
+
+  & > * {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s;
+  }
+
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+  
+  &__invisible {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    padding: 2rem 0;
+  }
+
+  &:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+
+    .btn__visible {
+      transform: translateY(100%);
+    }
+
+    .btn__invisible {
+      top: 0;
+    }
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
