Add media queries

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -64,6 +67,11 @@ body {
   flex: 0 0 40%;
   justify-content: center;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%;
+      background-color: var(--color-gray-light-2); } }
   .search__input {
     width: 90%;
     margin-right: -3.25rem;
@@ -157,10 +165,20 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: 0.5rem; }
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item:not(:last-child) {
+          margin: 0; } }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__item {
+        flex: 1; } }
   .side-nav__item::before {
     content: '';
     position: absolute;
@@ -185,11 +203,25 @@ body {
     color: var(--color-gray-light-1);
     text-decoration: none;
     text-transform: uppercase; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        justify-content: center;
+        padding: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        flex-direction: column;
+        padding: 1.5rem 0.5rem; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor; }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__icon {
+        margin-right: 0;
+        margin-bottom: 0.7rem;
+        width: 1.5rem;
+        height: 1.5rem; } }
 
 /* LEGAL TEXT */
 .legal {
@@ -197,6 +229,9 @@ body {
   color: var(--color-gray-light-4);
   text-align: center;
   padding: 2.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .legal {
+      display: none; } }
 
 /* GALLERY */
 .gallery {
@@ -216,6 +251,10 @@ body {
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__heading {
+        font-size: 1.8rem;
+        padding: 1.25rem 2rem; } }
   .overview__stars {
     display: flex;
     margin-right: auto; }
@@ -239,14 +278,23 @@ body {
     margin-left: 3rem;
     color: #fff;
     background-color: var(--color-primary); }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating {
+        padding: 0 1.5rem; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     line-height: 1.3;
     /* margin-bottom: -3px; */ }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-average {
+        font-size: 1.8rem; } }
   .overview__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-count {
+        font-size: 0.5rem; } }
 
 /* BUTTON INLINE */
 .btn-inline {
@@ -295,6 +343,12 @@ body {
   padding: 3rem 0;
   margin: 3rem 0;
   border-top: var(--line); }
+  @media only screen and (max-width: 37.5em) {
+    .list {
+      margin-left: 7rem; } }
+  @media only screen and (max-width: 24.375em) {
+    .list {
+      flex-direction: column; } }
   .list__item {
     flex: 0 0 50%;
     margin-bottom: 0.7rem; }
@@ -325,14 +379,13 @@ body {
 /* RECOMMEND */
 .recommend {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   font-size: 1.3rem;
-  color: var(--color-gray-dark-3);
-  /* &__count {
-    // Im using justify-content: space-between on parent instead
-    //margin-right: auto;
-  } */ }
+  color: var(--color-gray-dark-3); }
+  .recommend__count {
+    margin-right: auto; }
+  .recommend__friends {
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     width: 4rem;
@@ -340,7 +393,7 @@ body {
     border: 3px solid #fff;
     border-radius: 50%; }
     .recommend__photo:not(:last-child) {
-      margin-right: -1.5rem; }
+      margin-right: -2rem; }
 
 /* REVIEWS */
 .review {
@@ -350,6 +403,10 @@ body {
   margin-bottom: 3.5rem;
   background-color: #fff;
   box-shadow: var(--shadow-light); }
+  @media only screen and (max-width: 56.25em) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 3rem; } }
   .review::before {
     content: '\201C';
     position: absolute;
@@ -391,11 +448,18 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 56.25em) {
+    .cta {
+      padding: 2.5rem 0; } }
   .cta__book-now {
     font-size: 2rem;
     font-weight: 300;
     text-transform: uppercase;
     margin-bottom: 2.5rem; }
+    @media only screen and (max-width: 31.25em) {
+      .cta__book-now {
+        font-size: 1.7rem;
+        margin-bottom: 2rem; } }
 
 /* CALL TO ACTION BUTTON */
 .btn {
@@ -437,6 +501,12 @@ body {
   margin: 8rem auto;
   background-color: var(--color-gray-light-1);
   box-shadow: var(--shadow-dark); }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      min-width: 320px;
+      width: 100%; } }
 
 .header {
   display: flex;
@@ -446,9 +516,17 @@ body {
   font-size: 1.4rem;
   background-color: #fff;
   border-bottom: var(--line); }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      align-content: space-around;
+      height: 11rem; } }
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 56.25em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   display: flex;
@@ -466,6 +544,12 @@ body {
   font-size: 1.4rem;
   background-color: var(--color-gray-light-1);
   border-bottom: var(--line); }
+  @media only screen and (max-width: 56.25em) {
+    .detail {
+      padding: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .detail {
+      flex-direction: column; } }
 
 .description {
   flex: 0 0 60%;
@@ -473,6 +557,14 @@ body {
   margin-right: 4.5rem;
   background-color: #fff;
   box-shadow: var(--shadow-light); }
+  @media only screen and (max-width: 56.25em) {
+    .description {
+      padding: 2rem;
+      margin-right: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .description {
+      margin-right: 0;
+      margin-bottom: 3rem; } }
 
 .user-reviews {
   display: flex;
