--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,12 @@
   justify-content: center;
   align-items: center;
 
+  @media only screen and (max-width: $bp-smallest) {
+   order: 1;
+   flex: 0 0 100%;
+   background-color: var(--color-gray-light-2);
+  }
+
   &__input {
     width: 90%;
     margin-right: -3.25rem;
@@ -145,11 +151,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
 
@@ -187,6 +206,16 @@
     color: var(--color-gray-light-1);
     text-decoration: none;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
 
   &__icon {
@@ -194,6 +223,13 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: 0.7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -203,6 +239,10 @@
   color: var(--color-gray-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 /* GALLERY */
@@ -227,6 +267,12 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
+
   }
 
   &__stars {
@@ -263,6 +309,10 @@
     color: #fff;
     background-color: var(--color-primary);
 
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
+
   }
 
   &__rating-average {
@@ -270,11 +320,21 @@
     font-weight: 300;
     line-height: 1.3;
     /* margin-bottom: -3px; */
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
+
   }
   
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.5rem;
+    }
+
   }
 
 }
@@ -344,6 +404,14 @@
   margin: 3rem 0;
   border-top: var(--line);
 
+  @media only screen and (max-width: $bp-small) {
+    margin-left: 7rem;
+  }
+
+  @media only screen and (max-width: $bp-micro) {
+    flex-direction: column;
+  }
+
   &__item {
     flex: 0 0 50%;
     margin-bottom: 0.7rem;
@@ -383,15 +451,17 @@
 /* RECOMMEND */
 .recommend {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   font-size: 1.3rem;
   color: var(--color-gray-dark-3);
 
-  /* &__count {
-    // Im using justify-content: space-between on parent instead
-    //margin-right: auto;
-  } */
+  &__count {
+    margin-right: auto;
+  }
+
+  &__friends {
+    display: flex;
+  }
 
   &__photo {
     box-sizing: content-box;
@@ -401,7 +471,7 @@
     border-radius: 50%;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 
@@ -415,6 +485,11 @@
   margin-bottom: 3.5rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &::before {
     content: '\201C';
@@ -476,12 +551,20 @@
   padding: 3.5rem 0;
   text-align: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
+
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
     text-transform: uppercase;
     margin-bottom: 2.5rem;
-
+    
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 1.7rem;
+      margin-bottom: 2rem;
+    }
   }
 }
 
