--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -423,15 +423,19 @@
     width: 1rem;
     height: 1rem;
     margin-right: 0.7rem;
+    
+    // Fall back
+    background-image: url('../img/chevron-thin-right.svg');
+    background-size: cover;
 
-    // background-image: url('../img/chevron-thin-right.svg');
-    // background-size: cover;
-
-    background-color: var(--color-primary);
-    -webkit-mask-image: url('../img/chevron-thin-right.svg');
-    -webkit-mask-size: cover;
-    mask-image: url('../img/chevron-thin-right.svg');
-    mask-size: cover;
+    @supports (-webkit-mask-image: url() ) or ( mask-image: url() ) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url('../img/chevron-thin-right.svg');
+      -webkit-mask-size: cover;
+      mask-image: url('../img/chevron-thin-right.svg');
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
