--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -93,6 +93,7 @@
 
 /* USER NAVIGATION */
 .user-nav {
+  position: relative;
   display: flex;
   align-items: center;
   align-self: stretch;
@@ -141,7 +142,55 @@
     margin-right: 1rem;
   }
 
-  &__user-name {
+  &__user {
+  }
+  
+  &__user:hover > &__dropdown {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    transition: all .5s;
+  }
+  
+  &__dropdown {
+    position: absolute;
+    top: 6.9rem;
+    right: -0.1px;
+    width: 12.2rem;
+    background-color: var(--color-gray-dark-1);
+    z-index: 20;
+    opacity: 0;
+    transform: translateY(-20px);
+    visibility: hidden;
+  }
+
+  &__menu {
+    list-style: none;
+  }
+
+  &__menu-item {
+    padding: 1.5rem 1rem;
+
+    &:hover {
+      background-color: var(--color-primary-light);
+    }
+  }
+
+  &__link:link,
+  &__link:visited {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 1rem;
+    fill: currentColor;
   }
 }
 
